# cpp-header-benchmark

./: .gitignore  CMakeLists.txt  README.md
configs/: full.json  simple.json
eval/: cpp-header-benchmark.ipynb
src/: main.cc
